--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>Web Browsers</h1>
     <p>The purpose of a web browser (<a href="https://www.google.com/intl/es/chrome/">Chrome</a>, <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/es-ES/firefox/">Firefox</a>, <a href="https://www.apple.com/es/safari/">Safari</a>) is to read HTML documents and display them correctly.</p>
-    <!--añadir los logos de los navegadores listados  --> 
+    <!--añadir los logos de los navegadores listados  --> <i class="fa-brands fa-chrome"></i> <i class="fa-brands fa-edge"></i> <i class="fa-brands fa-firefox-browser"></i> <i class="fa-brands fa-safari"></i>
     <p>A browser does not display the HTML tags, but uses them to determine how to display the document:</p>
     <img src="./img/img1.png" alt="imagen" width="35%">
     <hr/>
     <h1>HTML Page Structure</h1>
     <p>Below is a visulization of an HTML page structure:</p>
-    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen-->
-    <!--añadir una linea horizontal -->
-    <!--añadir un encabezado donde indiques el título de una nueva sección llamada "Mi repositories"  -->
+    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen--> <img2.png> <width100%>
+    <!--añadir una linea horizontal --><hr> 
+    <!--añadir un encabezado donde indiques el título de una nueva sección llamada "Mi repositories"  --> <h2>Mi repositories</h2> 
     <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  -->
     
 </body>
