--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen--> <img2.png> <width100%>
     <!--añadir una linea horizontal --><hr> 
     <!--añadir un encabezado donde indiques el título de una nueva sección llamada "Mi repositories"  --> <h2>Mi repositories</h2> 
-    <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  --><a href= https://github.com/JoanCL06/SMX2-M12-IntroHTML-GitHubPages-main.git</a> <a href= https://github.com/JoanCL06/2425-smx2-a0-repoejemplo.git target= _blank> 
+    <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  --><a href= https://github.com/JoanCL06/2425-smx2-a1-Introducci-a-Markdown.git>Repositorio Markdown</a> <a href= https://github.com/JoanCL06/2425-smx2-a0-repoejemplo.git target= _blank>Repositorio Ejemplo</a> 
 </html>
